Add missing Hono dependency & bump version for Cumstack package

--- a/templates/monorepo/app/package.json
+++ b/templates/monorepo/app/package.json
@@ -8,7 +8,7 @@
     "start": "bun run dist/server.js"
   },
   "dependencies": {
-    "cumstack": "^"
+    "cumstack": "^1.0.1"
   },
   "devDependencies": {
     "bun": "^1.3.5",
