--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cumstack",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A lightweight reactive framework with signals, routing, and i18n",
   "type": "module",
   "main": "index.js",
@@ -29,6 +29,7 @@
   ],
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "hono": "^4.11.3",
     "postcss": "^8.5.6",
     "ws": "^8.18.3"
   },
