Add shared utilities for API, CDN, and environment handling

--- a/package.json
+++ b/package.json
@@ -37,12 +37,17 @@
     ".": "./index.js",
     "./app/client": "./src/app/client/index.js",
     "./app/server": "./src/app/server/index.js",
+    "./app/shared": "./src/app/shared/index.js",
     "./app/shared/i18n": "./src/app/shared/i18n.js",
     "./app/shared/reactivity": "./src/app/shared/reactivity.js",
     "./app/shared/router": "./src/app/shared/router.js",
     "./app/shared/utils": "./src/app/shared/utils.js",
     "./app/shared/language-codes": "./src/app/shared/language-codes.js",
+    "./app/shared/env": "./src/app/shared/env.js",
+    "./app/shared/api": "./src/app/shared/api.js",
+    "./app/shared/cdn": "./src/app/shared/cdn.js",
     "./client/Lust": "./src/app/client/Lust.js",
+    "./client/Image": "./src/app/client/Image.js",
     "./client/components": "./src/app/client/components.js",
     "./client/hmr": "./src/app/client/hmr.js",
     "./server/components": "./src/app/server/components.js",
